added init function

--- a/homework_4/Makefile
+++ b/homework_4/Makefile
@@ -1,12 +1,12 @@
-all: matrix
+all: main
 
 main: main.o matrix.o
 	g++ main.o matrix.o -o main
 
-matrix.o: main.cpp matrix.h
+matrix.o: matrix.cpp matrix.h
 	g++ -c matrix.cpp
 
-main.o: main.cpp
+main.o: main.cpp 
 	g++ -c main.cpp
 
 clean:
