added sumParallel method

--- a/homework_4/Makefile
+++ b/homework_4/Makefile
@@ -1,7 +1,7 @@
 all: main
 
 main: main.o matrix.o
-	g++ main.o matrix.o -o main
+	g++ main.o matrix.o -o main -pthread
 
 matrix.o: matrix.cpp matrix.h
 	g++ -c matrix.cpp
