--- a/homework_5/Makefile
+++ b/homework_5/Makefile
@@ -1,10 +1,10 @@
 all: main
 
-main: main.o parallel_scelduler.o
-	g++ main.o parallel_scelduler.o -o main -pthread
+main: main.o parallel_scheduler.o
+	g++ main.o parallel_scheduler.o -o main -pthread
 
-parallel_scelduler.o: parallel_scelduler.cpp parallel_scelduler.h
-	g++ -c parallel_scelduler.cpp
+parallel_scheduler.o: parallel_scheduler.cpp parallel_scheduler.h
+	g++ -c parallel_scheduler.cpp
 
 main.o: main.cpp
 	g++ -c main.cpp
