--- a/homework_9/CMakeLists.txt
+++ b/homework_9/CMakeLists.txt
@@ -3,4 +3,4 @@ project(homework_9)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(homework_9 main.cpp)
+add_executable(homework_9 main.cpp lib/http.h lib/http.cpp)
